Fixed design problems for smaller phones

--- a/package.json
+++ b/package.json
@@ -23,5 +23,6 @@
         "live-server": "^1.2.1",
         "node-sass": "*",
         "parcel-bundler": "*"
-    }
+    },
+    "dependencies": {}
 }
